Add error handling